objects/Risk_Statement__c.object
<CustomObject>
    <fields>
        <fullName>ACTIVE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACTIVE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <label>Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engine</fullName>
                </value>
                <value>
                    <fullName>Wheather</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <label>Risk Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Statement__c</fullName>
        <label>Risk Statement</label>
        <referenceTo>Route_FRAs__c</referenceTo>
        <relationshipLabel>Risk Statements</relationshipLabel>
        <relationshipName>Risk_Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Risk Statement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Risk_Category__c</columns>
        <columns>Risk_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>